Codefinity/If,else, elif.txt

#if/elif/else




Python output:


Is 2 equal to 4? False
Is 982*37 greater than 354*98? True
3
False

C:\Users\insertDisc>py C:\Users\insertDisc\Desktop\Python\Codefinity\boolean.py
Is 2 equal to 4? False
Is 982*37 greater than 354*98? True
3
False

C:\Users\insertDisc>py "C:\Users\insertDisc\Desktop\Python\Codefinity\If und else.py"
  File "C:\Users\insertDisc\Desktop\Python\Codefinity\If und else.py", line 36
    print(is.instance(num), 0 and 2)
          ^^
SyntaxError: invalid syntax

C:\Users\insertDisc>py "C:\Users\insertDisc\Desktop\Python\Codefinity\If und else.py"
Nothing special
This string is wide!
Everything is ok!
Traceback (most recent call last):
  File "C:\Users\insertDisc\Desktop\Python\Codefinity\If und else.py", line 36, in <module>
    print(isinstance(num), 0 and 2)
          ^^^^^^^^^^^^^^^
TypeError: isinstance expected 2 arguments, got 1

C:\Users\insertDisc>py "C:\Users\insertDisc\Desktop\Python\Codefinity\If und else.py"
Nothing special
This string is wide!
Everything is ok!
Traceback (most recent call last):
  File "C:\Users\insertDisc\Desktop\Python\Codefinity\If und else.py", line 36, in <module>
    print(isinstance(num), float)
          ^^^^^^^^^^^^^^^
TypeError: isinstance expected 2 arguments, got 1

C:\Users\insertDisc>py "C:\Users\insertDisc\Desktop\Python\Codefinity\If und else.py"
  File "C:\Users\insertDisc\Desktop\Python\Codefinity\If und else.py", line 36
    isinstance((num), float))
                            ^
SyntaxError: unmatched ')'

C:\Users\insertDisc>py "C:\Users\insertDisc\Desktop\Python\Codefinity\If und else.py"
Nothing special
This string is wide!
Everything is ok!
We are breaking even!

C:\Users\insertDisc>py "C:\Users\insertDisc\Desktop\Python\Codefinity\If und else.py"
Nothing special
This string is wide!
Everything is ok!
False
We are breaking even!

C:\Users\insertDisc>py "C:\Users\insertDisc\Desktop\Python\Codefinity\If und else.py"
Nothing special
This string is wide!
Everything is ok!
False
We are breaking even!

C:\Users\insertDisc>